--- a/src/manifest.json
+++ b/src/manifest.json
@@ -34,7 +34,10 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "tab-switch-shortcuts@tobiasneuschaefer",
-      "strict_min_version": "139.0"
+      "strict_min_version": "139.0",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
     }
   }
 }
