Update extension version to reflect addition of localization, add further icon sizes

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "__MSG_extensionName__",
   "short_name": "__MSG_extensionShortName__",
-  "version": "1.0",
+  "version": "1.1",
   "description": "__MSG_extensionDescription__",
   "default_locale": "en",
   "developer": {
@@ -14,8 +14,11 @@
     "scripts": ["background.js"]
   },
   "icons": {
+    "32": "icons/icon-32.png",
     "48": "icons/icon-48.png",
-    "96": "icons/icon-96.png"
+    "64": "icons/icon-64.png",
+    "96": "icons/icon-96.png",
+    "128": "icons/icon-128.png"
   },
   "commands": {
     "focus-right-tab": {
